# CrisprCheck

./: .gitignore  ISSUES.md  Makefile  README.md  nbt.3437.txt  pyproject.toml  results_human.csv
.github/workflows/: ci.yml
crispr_check/: __init__.py  cli.py  scoring.py  search.py  visualization.py
crispr_check/data/: cfd_published.json
tests/: _debug_scan.py  rev.fa  test_cfd.py  test_cfd_full.py  test_cfd_published.py  test_cfd_table.py  test_cli_scoring.py  test_edgecases.py  test_scoring.py  test_search.py
tests/data/: cas12a.fa  cfd_small.json  multi.fa  small.fa
tools/: build_cfd_from_fractionactive.py  extract_nbt_pdf.py  extract_tables_from_pdf.py  streamlit_app.py  summarize_results.py
